# fuzzer-prototype

./: Cargo.toml  hello-riscv  hello-x86_64  objdump  pyfuzz.py
src/: main.rs
